--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,8 @@ debug.log
 multithreaded.log
 
 # Исполняемые файлы проекта
-test_logger
-log_stats
+/test_logger
+/log_stats
 run_tests
 
 # Системные файлы Ubuntu/Debian
